# amazingpycounts

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/amazingpycounts/: __init__.py
tests/: test_amazingpycounts.py
