[tool.poetry]
name = "amazingpycounts"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Rob Nicholls"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
